--- a/pom.xml
+++ b/pom.xml
@@ -32,14 +32,18 @@
     <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
-        <version>2.21.1</version> <!-- Verifica la versión más reciente en el repositorio Maven -->
+        <version>2.21.1</version> 
     </dependency>
     <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
-        <version>2.21.1</version> <!-- Verifica la versión más reciente en el repositorio Maven -->
+        <version>2.21.1</version> 
     </dependency>
-
+    <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core-jakarta</artifactId>
+			<version>5.6.12.Final</version>
+		</dependency>
 
 	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 <dependency>
